--- a/pdfmaker/requirements.txt
+++ b/pdfmaker/requirements.txt
@@ -1,3 +1,3 @@
-Pillow==5.1.0
--e hg+https://bitbucket.org/rptlab/reportlab@ae13c67#egg=reportlab
+Pillow==5.2.0
+reportlab==3.5.6
 webcolors==1.8.1
