--- a/fontcfg/KA New Stathis.yml
+++ b/fontcfg/KA New Stathis.yml
@@ -1,537 +1,541 @@
 fonts:
-  - family: KA New Stathis Main
-    alias:  "Main"
+  - font:
+    - family: KA New Stathis Main
+    - alias:  "Main"
 
-  - family: KA New Stathis Martyria
-    alias:  "Martyria"
+  - font:
+    - family: KA New Stathis Martyria
+    - alias:  "Martyria"
 
-  - family: KA New Stathis Combo
-    alias:  "Combo"
+  - font:
+    - family: KA New Stathis Combo
+    - alias:  "Combo"
 
-  - family: KA New Stathis Archaia
-    alias:  "Archaia"
+  - font:
+    - family: KA New Stathis Archaia
+    - alias:  "Archaia"
 
-  - family: KA New Stathis Fthora
-    alias:  "Fthora"
+  - font:
+    - family: KA New Stathis Fthora
+    - alias:  "Fthora"
 
-  - family: KA New Stathis Chronos
-    alias:  "Chronos"
-
-default-font: "Main"
+  - font:
+    - family: KA New Stathis Chronos
+    - alias:  "Chronos"
 
 shorthand-to-char:
   ## KA New Stathis Main
   - in: klasD
     out:
       - char: "A"
-        font: "Main"
+      - font: "Main"
 
   - in: klasL
     out:
       - char: "a"
-        font: "Main"
+      - font: "Main"
 
   - in: hapl
     out:
       - char: "D"
-        font: "Main"
+      - font: "Main"
 
   - in: klas
     out:
       - char: "d"
-        font: "Main"
+      - font: "Main"
 
   - in: diplR
     out:
       - char: "F"
-        font: "Main"
+      - font: "Main"
 
   - in: dipl
     out:
       - char: "f"
-        font: "Main"
+      - font: "Main"
 
   - in: tripR
     out:
       - char: "G"
-        font: "Main"
+      - font: "Main"
 
   - in: trip
     out:
       - char: "g"
-        font: "Main"
+      - font: "Main"
 
   - in: tetrR
     out:
       - char: "H"
-        font: "Main"
+      - font: "Main"
 
   - in: tetr
     out:
       - char: "h"
-        font: "Main"
+      - font: "Main"
 
   - in: antiD2
     out:
       - char: "J"
-        font: "Main"
+      - font: "Main"
 
   - in: anti
     out:
       - char: "j"
-        font: "Main"
+      - font: "Main"
 
   - in: akaplD2
     out:
       - char: "K"
-        font: "Main"
+      - font: "Main"
 
   - in: akapl
     out:
       - char: "k"
-        font: "Main"
+      - font: "Main"
 
   - in: akaplR
     out:
       - char: "l"
-        font: "Main"
+      - font: "Main"
 
   - in: psklasR
     out:
       - char: "M"
-        font: "Main"
+      - font: "Main"
 
   - in: psklas
     out:
       - char: "m"
-        font: "Main"
+      - font: "Main"
 
   - in: psefD2
     out:
       - char: "N"
-        font: "Main"
+      - font: "Main"
 
   - in: psef
     out:
       - char: "n"
-        font: "Main"
+      - font: "Main"
 
   - in: klasDR
     out:
       - char: "S"
-        font: "Main"
+      - font: "Main"
 
   - in: klasR
     out:
       - char: "s"
-        font: "Main"
+      - font: "Main"
 
   - in: hete
     out:
       - char: "["
-        font: "Main"
+      - font: "Main"
 
   - in: endo
     out:
       - char: "]"
-        font: "Main"
+      - font: "Main"
 
   - in: heteD2
     out:
       - char: "{"
-        font: "Main"
+      - font: "Main"
 
   - in: barlU
     out:
       - char: "|"
-        font: "Main"
+      - font: "Main"
 
   - in: barlUL
     out:
       - char: "}"
-        font: "Main"
+      - font: "Main"
 
   - in: kent
     out:
       - char: "~"
-        font: "Main"
+      - font: "Main"
 
   - in: barlUR
     out:
       - char: "«"
-        font: "Main"
+      - font: "Main"
 
   - in: klasU1.1L0.9
     out:
       - char: "å"
-        font: "Main"
+      - font: "Main"
 
   - in: diplDR1.5
     out:
       - char: "ƒ"
-        font: "Main"
+      - font: "Main"
 
   - in: akaplD1.5
     out:
       - char: "˚"
-        font: "Main"
+      - font: "Main"
 
   - in: spsef
     out:
       - char: "‘"
-        font: "Main"
+      - font: "Main"
 
   - in: heteD2R2
     out:
       - char: "“"
-        font: "Main"
+      - font: "Main"
 
   - in: heteD3
     out:
       - char: "”"
-        font: "Main"
+      - font: "Main"
 
   - in: haplDR
     out:
       - char: "∂"
-        font: "Main"
+      - font: "Main"
 
   - in: coro
     out:
       - char: "≠"
-        font: "Main"
+      - font: "Main"
 
   - in: homa
     out:
       - char: "'"
-        font: "Main"
+      - font: "Main"
 
   - in: homaD2R
     out:
       - char: ":"
-        font: "Main"
+      - font: "Main"
 
   - in: homaR
     out:
       - char: ";"
-        font: "Main"
+      - font: "Main"
 
   - in: lpsef
     out:
       - char: "B"
-        font: "Main"
+      - font: "Main"
 
   - in: olapelken2
     out:
       - char: "C"
-        font: "Main"
+      - font: "Main"
 
   - in: petapel
     out:
       - char: "E"
-        font: "Main"
+      - font: "Main"
 
   - in: pethh
     out:
       - char: "I"
-        font: "Main"
+      - font: "Main"
 
   - in: apoapo
     out:
       - char: "L"
-        font: "Main"
+      - font: "Main"
 
   - in: petapohh
     out:
       - char: "O"
-        font: "Main"
+      - font: "Main"
 
   - in: isoapo
     out:
       - char: "P"
-        font: "Main"
+      - font: "Main"
 
   - in: petapo
     out:
       - char: "Q"
-        font: "Main"
+      - font: "Main"
 
   - in: peth
     out:
       - char: "R"
-        font: "Main"
+      - font: "Main"
 
   - in: petapoh
     out:
       - char: "T"
-        font: "Main"
+      - font: "Main"
 
   - in: petapelh
     out:
       - char: "U"
-        font: "Main"
+      - font: "Main"
 
   - in: olsyneken2
     out:
       - char: "V"
-        font: "Main"
+      - font: "Main"
 
   - in: petel
     out:
       - char: "W"
-        font: "Main"
+      - font: "Main"
 
   - in: olapoken2
     out:
       - char: "X"
-        font: "Main"
+      - font: "Main"
 
   - in: petelh
     out:
       - char: "Y"
-        font: "Main"
+      - font: "Main"
 
   - in: olken2
     out:
       - char: "Z"
-        font: "Main"
+      - font: "Main"
 
   - in: olhken2
     out:
       - char: "b"
-        font: "Main"
+      - font: "Main"
 
   - in: olelken2
     out:
       - char: "c"
-        font: "Main"
+      - font: "Main"
 
   - in: petken
     out:
       - char: "e"
-        font: "Main"
+      - font: "Main"
 
   - in: pethyhy
     out:
       - char: "i"
-        font: "Main"
+      - font: "Main"
 
   - in: petkenhyhy
     out:
       - char: "o"
-        font: "Main"
+      - font: "Main"
 
   - in: petiso
     out:
       - char: "p"
-        font: "Main"
+      - font: "Main"
 
   - in: peta
     out:
       - char: "q"
-        font: "Main"
+      - font: "Main"
 
   - in: pethy
     out:
       - char: "r"
-        font: "Main"
+      - font: "Main"
 
   - in: pethyL
     out:
       - char: "t"
-        font: "Main"
+      - font: "Main"
 
   - in: petkenhyU2
     out:
       - char: "u"
-        font: "Main"
+      - font: "Main"
 
   - in: olhypoken2
     out:
       - char: "v"
-        font: "Main"
+      - font: "Main"
 
   - in: petol
     out:
       - char: "w"
-        font: "Main"
+      - font: "Main"
 
   - in: olisoken2
     out:
       - char: "x"
-        font: "Main"
+      - font: "Main"
 
   - in: petkenhy
     out:
       - char: "y"
-        font: "Main"
+      - font: "Main"
 
   - in: olken2D
     out:
       - char: "z"
-        font: "Main"
+      - font: "Main"
 
   - in: olken2DC
     out:
       - char: "Ω"
-        font: "Main"
+      - font: "Main"
 
   - in: olkentD
     out:
       - char: "™"
-        font: "Main"
+      - font: "Main"
 
   - in: iso
     out:
       - char: "0"
-        font: "Main"
+      - font: "Main"
 
   - in: olig
     out:
       - char: "1"
-        font: "Main"
+      - font: "Main"
 
   - in: olkenD
     out:
       - char: "2"
-        font: "Main"
+      - font: "Main"
 
   - in: olken
     out:
       - char: "3"
-        font: "Main"
+      - font: "Main"
 
   - in: olhy
     out:
       - char: "4"
-        font: "Main"
+      - font: "Main"
 
   - in: olhyL
     out:
       - char: "5"
-        font: "Main"
+      - font: "Main"
 
   - in: olkenhy
     out:
       - char: "6"
-        font: "Main"
+      - font: "Main"
 
   - in: olkenhyU2
     out:
       - char: "7"
-        font: "Main"
+      - font: "Main"
 
   - in: olhyhy
     out:
       - char: "8"
-        font: "Main"
+      - font: "Main"
 
   - in: olkenhyhy
     out:
       - char: "9"
-        font: "Main"
+      - font: "Main"
 
   - in: apos
     out:
       - char: "!"
-        font: "Main"
+      - font: "Main"
 
   - in: elaf
     out:
       - char: "@"
-        font: "Main"
+      - font: "Main"
 
   - in: apel
     out:
       - char: "#"
-        font: "Main"
+      - font: "Main"
 
   - in: cham
     out:
       - char: "$"
-        font: "Main"
+      - font: "Main"
 
   - in: apoh
     out:
       - char: "%"
-        font: "Main"
+      - font: "Main"
 
   - in: elh
     out:
       - char: "^"
-        font: "Main"
+      - font: "Main"
 
   - in: apelh
     out:
       - char: "&"
-        font: "Main"
+      - font: "Main"
 
   - in: hh
     out:
       - char: "*"
-        font: "Main"
+      - font: "Main"
 
   - in: apohh
     out:
       - char: "("
-        font: "Main"
+      - font: "Main"
 
   - in: hypo
     out:
       - char: "-"
-        font: "Main"
+      - font: "Main"
 
   - in: syne
     out:
       - char: "_"
-        font: "Main"
+      - font: "Main"
 
   - in: ken2
     out:
       - char: "`"
-        font: "Main"
+      - font: "Main"
 
   - in: stav
     out:
       - char: "+"
-        font: "Main"
+      - font: "Main"
 
   - in: brea
     out:
       - char: "="
-        font: "Main"
+      - font: "Main"
 
   - in: rest2
     out:
       - char: "<"
-        font: "Main"
+      - font: "Main"
 
   - in: rest
     out:
       - char: ","
-        font: "Main"
+      - font: "Main"
 
   - in: rest4
     out:
       - char: ">"
-        font: "Main"
+      - font: "Main"
 
   - in: rest3
     out:
       - char: "."
-        font: "Main"
+      - font: "Main"
 
   - in: vare
     out:
       - char: "/"
-        font: "Main"
+      - font: "Main"
 
   - in: restg
     out:
       - char: "?"
-        font: "Main"
+      - font: "Main"
 
   - in: barl
     out:
       - char: "\"
-        font: "Main"
+      - font: "Main"
