--- a/fontcfg/KA New Stathis.yml
+++ b/fontcfg/KA New Stathis.yml
@@ -440,13 +440,13 @@ shorthand-to-char:
       - font: "Main"
 
   - neume:
-    - in: olken2D
+    - in: olken2DR
     - out:
       - char: "z"
       - font: "Main"
 
   - neume:
-    - in: olken2DC
+    - in: olken2D
     - out:
       - char: "Ω"
       - font: "Main"
